Bug 1705824 - Make nsMsgTxn::Merge a no-op rather than unimplemented. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D122554

--HG--
extra : rebase_source : 88ab4f6ee5a2843cae561c3418a2638ae38cfd2f
extra : amend_source : af88e45831aba3869ed55d88d0ced5e735637aab